# sdr_final

./: report.docx
gr-modulator/: CMakeLists.txt  MANIFEST.yml  build.sh  build_and_run.sh
gr-modulator/.conda/: README.md
gr-modulator/.conda/recipe/: meta.yaml
gr-modulator/apps/: CMakeLists.txt
gr-modulator/cmake/Modules/: gnuradio-modulatorConfig.cmake
gr-modulator/docs/: CMakeLists.txt  README.modulator
gr-modulator/docs/doxygen/: CMakeLists.txt  Doxyfile.in
gr-modulator/docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
gr-modulator/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-modulator/examples/: CMakeLists.txt
gr-modulator/grc/: CMakeLists.txt  modulator_demodulate.block.yml  modulator_modulator.block.yml
gr-modulator/include/gnuradio/modulator/: CMakeLists.txt  api.h
gr-modulator/lib/: CMakeLists.txt
gr-modulator/python/modulator/: __init__.py  demodulate.py  modulator.py  qa_demodulate.py  qa_modulator.py
gr-modulator/python/modulator/bindings/: CMakeLists.txt
grc_files/: fm_modulation.grc  fm_modulation.py  noised.grc  noised.py  output_file  output_handle.py  untitled.grc  untitled.py
helper_bash_commands/: build.sh  build_and_open_comp.sh  build_and_open_fm_modulation.sh  build_and_open_untitled.sh  output_file  print_output_file.sh  run_python.sh
